align z-index, fix issue with drawer bg color

--- a/src/components/molecules/HeroBanner/heroBanner.module.scss
+++ b/src/components/molecules/HeroBanner/heroBanner.module.scss
@@ -5,8 +5,6 @@
   width: 100%;
   position: relative;
   min-height: 400px;
-  max-height: calc(100vh - #{variables.$navbar-height});
-  overflow: hidden;
   display: flex;
   justify-content: center;
 
@@ -25,7 +23,8 @@
   }
 
   &.fullHeight {
-    height: 100%;
+    height: calc(100% + #{variables.$navbar-height});
+    margin-top: -#{variables.$navbar-height};
   }
 }
 
