--- a/src/components/organisms/Header/header.module.scss
+++ b/src/components/organisms/Header/header.module.scss
@@ -8,6 +8,7 @@
     position: sticky;
     flex-shrink: 0;
     top: 0;
+    z-index: 10000;
 }
 
 .navbar {
